--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,24 @@ section {
 
 .housephoto {
     opacity: .70;
+}
+
+.housephoto div {
+    display: inline;
+}
+
+img {
+    height: 250px;
+    width:auto;
+    margin-right: 20px;
+}
+
+.display-scores {
+    color: black;
+    position: relative;
+    right: 90px;
+    bottom: 5px;
+}
 
 .opponent {
     text-transform: capitalize;
